infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: www.type-reader.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/books/?(.*)
            pathType: Prefix
            backend:
              service:
                name: books-srv
                port:
                  number: 3000
          - path: /api/bookmark/?(.*)
            pathType: Prefix
            backend:
              service:
                name: bookmark-srv
                port:
                  number: 3000
          - path: /api/stats/?(.*)
            pathType: Prefix
            backend:
              service:
                name: stats-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
